fixed bg images not showing

--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/r8kYhVN.jpeg?rand=9fb3");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("https://i.imgur.com/r8kYhVN.jpeg");
   background-position: 50% 50%;
 }
 
@@ -51,7 +51,7 @@
     width: 340px;
   }
 } .u-section-2 {
-  background-image: url("images/fzcgCeS.jpeg");
+  background-image: url("https://i.imgur.com/fzcgCeS.jpeg");
   background-position: 50% 50%;
 }
 
